--- a/src/app/tamplate/cliente/cliente.component.html
+++ b/src/app/tamplate/cliente/cliente.component.html
@@ -4,7 +4,13 @@
         <input class="form-control" type="text" [(ngModel)]="cliente.nome" />
 
         <label class="col-sm-2 col-form-label">Idade:</label>
-        <input class="form-control" type="text"[(ngModel)]="cliente.idade"/>      
+        <input class="form-control" type="text"[(ngModel)]="cliente.idade"/>    
+        
+        <label class="col-sm-2 col-form-label">Salário:</label>
+        <input class="form-control" type="text"[(ngModel)]="cliente.salario"/> 
+
+        <label class="col-sm-2 col-form-label">Data:</label>
+        <input class="form-control" type="date"[(ngModel)]="cliente.cadastro"/> 
       
        <br>
         <button type="button" class="btn btn-success" (click)="addCliente()" > Novo </button>
@@ -16,6 +22,8 @@
                 <tr>
                     <th scope="col">Nome</th>
                     <th scope="col">Idade</th>
+                    <th scope="col">Salário</th>
+                    <th scope="col">Data</th>
                 
                 </tr>
 
@@ -28,8 +36,10 @@
                     [ngClass] = "{'maior':item.idade >=18, 'menor': item.idade <18, 'melhor': item.idade >=60}"
                     *ngFor="let item of clientes ">
                      
-                    <td>{{item.nome | lowercase}}</td>  
-                    <td>{{item.idade}}</td>
+                    <td>{{item.nome | uppercase}}</td>  
+                    <td>{{item.idade }}</td>
+                    <td>{{item.salario | formatarMoeda}}</td>
+                    <td>{{item.cadastro | date:'dd/MM/yyyy'}}</td>
 
                 </tbody>
 
